Updated About page

--- a/funkoSite/templates/about.html
+++ b/funkoSite/templates/about.html
@@ -4,5 +4,6 @@
 {% block content %}
 <div class="jumbotron">
     <h1>This is a mock website</h1>
+    <h2>You are currently logged in as {{user.username}}</h2>
 </div>
 {% endblock %}
