--- a/funkoSite/templates/inventory/item_detail.html
+++ b/funkoSite/templates/inventory/item_detail.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 {% extends 'base.html' %}
 {% block title %}Item Details{% endblock %}
-{% block content %}
-    <div class="row">
-        <ul>list of username dibs
-        {% for dibs in item.item_user_dibs.all %}
-            <li>{{dibs.username}}</li>
-        {% endfor %}
-        </ul>
+{% block content %}    
+    <div class="media">
+        <img src="{{item.item_image.url}}" class="align-self-center mr-3" alt="...">
+        <div class="media-body">
+            <h5 class="mt-0">{{item.item_name}}</h5>
+            <p>{{item.item_description}}</p>
+            <p>{{item.item_price}}</p>
+            <p class="mb-0">Item condition: {{item.item_condition}}</p>
+            <ul>List of users:
+                {% for dibs in item.item_user_dibs.all %}
+                    <li>{{dibs.username}}</li>
+                {% endfor %}
+            </ul>
+            <br>
+            <br>
+            {% if user not in item.item_user_dibs.all %}
+                <a href="{% url 'inventory:item_dibs' pk=item.pk %}" class="btn btn-primary">Dibs!</a>           
+            {% else %}
+                <a href="{% url 'inventory:item_undibs' pk=item.pk %}" class="btn btn-primary">Undibs :(</a>
+            {% endif %}        
+        </div>
     </div>
+    {% if messages %}       
+        {% for message in messages %}            
+            <script>
+                alert('{{message}}');
+            </script>
+        {% endfor %}
+    </ul>
+    {% endif %}
 {% endblock %}
