--- a/funkoSite/templates/base.html
+++ b/funkoSite/templates/base.html
@@ -22,8 +22,13 @@
                     <a class="nav-link" href="{% url 'inventory:list_category' %}">Categories</a>
                 </li>
                 <li class="nav-item">
-                        <a class="nav-link" href="{% url 'inventory:list_item' %}">Items</a>
+                    <a class="nav-link" href="{% url 'inventory:list_item' %}">Items</a>
+                </li>
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'inventory:item_dibs_list' username=user.username%}">View My Items</a>
                     </li>
+                {% endif %}              
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'about' %}">About</a>
                 </li>
