--- a/funkoSite/templates/inventory/category/category_list.html
+++ b/funkoSite/templates/inventory/category/category_list.html
@@ -5,7 +5,7 @@
     <div class="row">
         {% for category in category_list %}  
             {% url 'inventory:detail_category' pk=category.pk as my_url %}
-            {% include 'inventory/category_card.html' with image=category.category_image.url title=category.category_name button_name="List" path=my_url %}
+            {% include 'inventory/category/category_card.html' with image=category.category_image.url title=category.category_name button_name="List" path=my_url %}
         {% empty %}
             <h1>List is Empty!</h1>
         {% endfor %}
