--- a/funkoSite/templates/inventory/category/category_list.html
+++ b/funkoSite/templates/inventory/category/category_list.html
@@ -2,13 +2,14 @@
 {% extends 'base.html' %}
 {% block title %}Category List{% endblock %}
 {% block content %}
-    <div class="row">
+    <div class="row">        
         {% for category in category_list %}  
-            {% url 'inventory:detail_category' pk=category.pk as my_url %}
-            {% include 'inventory/category/category_card.html' with image=category.category_image.url title=category.category_name button_name="List" path=my_url %}
+        <div class="card-buffer">            
+            {% include 'inventory/category/category_card.html' with image=category.category_image.url title=category.category_name %}
+        </div>    
         {% empty %}
-            <h1>List is Empty!</h1>
+            <h1>List is Empty!</h1>        
         {% endfor %}
+            
     </div>
 {% endblock %}
-
