--- a/funkoSite/templates/inventory/item/item_card.html
+++ b/funkoSite/templates/inventory/item/item_card.html
@@ -1,23 +1,21 @@
-<div class="card" style="width: 18rem;">
+<div class="card" style="width: 18rem; height:25rem;">
     <img src="{{image}}" class="card-img-top" alt="..." height="200px" width="200px">
     <div class="card-body">
-        <h5 class="card-title">{{title}}</h5>
+        <h5 class="card-title item-card-title-size">{{title}}</h5>
         <h6 class="card-subtitle mb-2 text-muted">₱ {{amount}}</h6>
         <h6 class="card-subtitle mb-2 text-muted"> Item condition: {{condition}}</h6>
-        <p class="card-text">{{text}}</p>
+        <!-- <p class="card-text">{{text}}</p> -->
         <!-- for item menu -->
         <!-- {% if button_name|length > 0 %}
         <a href="{{path}}" class="btn btn-primary">{{button_name}}</a>
         {% endif %} -->
         <!-- for system tailoring -->
-        {% if update_button_name|length > 0 %}
-            <a href="{{update_path}}" class="btn btn-primary">{{update_button_name}}</a>
+        {% if system_tailoring %}        
+            <a href="{% url 'inventory:update_item' pk=item.pk %}" class="btn btn-primary">Update</a>       
+            <a href="{% url 'inventory:delete_item' pk=item.pk %}" class="btn btn-primary">Delete</a>
+        {% else %}        
+            <a href="{% url 'inventory:detail_item' pk=item.pk %}" class="btn btn-primary">View details</a>
         {% endif %}
-        {% if delete_button_name|length > 0 %}
-            <a href="{{delete_path}}" class="btn btn-primary">{{delete_button_name}}</a>
-        {% endif %}
-        {% if view_button_name|length > 0 %}
-            <a href="{{view_path}}" class="btn btn-primary">{{view_button_name}}</a>
-        {% endif %}
+        
     </div>
 </div>
