--- a/funkoSite/templates/inventory/item/item_list_template.html
+++ b/funkoSite/templates/inventory/item/item_list_template.html
@@ -1,7 +1,6 @@
 <div class="row">
-    {% for item in item_list %}
-        {% url 'inventory:detail_item' pk=item.pk as my_path %}
-        {% include 'inventory/item/item_card.html' with image=item.item_image.url title=item.item_name amount=item.item_price condition=item.item_condition text=item.item_description view_button_name="View details" view_path=my_path %}
+    {% for item in item_list %}        
+        {% include 'inventory/item/item_card.html' with image=item.item_image.url title=item.item_name amount=item.item_price condition=item.item_condition text=item.item_description %}
     {% empty %}
         <h1>List is Empty!</h1>
     {% endfor %}
