--- a/funkoSite/templates/system_tailoring/system_tailoring.html
+++ b/funkoSite/templates/system_tailoring/system_tailoring.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 {% extends 'base.html' %}
 {% block title %}System Tailoring{% endblock %}
-{% block content %}
+{% block systemtailoring %}
     <div class="list-group">
         <a href="{% url 'inventory:system_tailoring_category' %}" class="list-group-item list-group-item-action">Category</a>
         <a href="{% url 'inventory:system_tailoring_item' %}" class="list-group-item list-group-item-action">Item</a>
