--- a/funkoSite/templates/inventory/item/item_detail.html
+++ b/funkoSite/templates/inventory/item/item_detail.html
@@ -8,6 +8,7 @@
             <h5 class="mt-0">{{item.item_name}}</h5>
             <p>{{item.item_description}}</p>
             <p>{{item.item_price}}</p>
+            <p>Number of user dibs: {{item.item_dibs_count}}</p>
             <p class="mb-0">Item condition: {{item.item_condition}}</p>
             <ul>List of users:
                 {% for dibs in user_list %}
