--- a/funkoSite/templates/users/signup.html
+++ b/funkoSite/templates/users/signup.html
@@ -2,10 +2,12 @@
 {% extends "base.html" %}
 {% block title %}Sign Up{% endblock %}
 {% block content %}
-    <h1>Sign-Up</h1>
-    <form method="POST">
-        {% csrf_token %}
-        {{form.as_p}}
-        <input type="submit" value="Sign Up">
-    </form>
+    <div>
+        <h1>Sign-Up</h1>
+        <form method="POST">
+                {% csrf_token %}
+                {{form.as_p}}
+                <input type="submit" value="Sign Up">
+        </form>
+    </div>
 {% endblock %}
