--- a/funkoSite/templates/base.html
+++ b/funkoSite/templates/base.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="{% static 'css/item/item.css' %}">
         <link rel="stylesheet" href="{% static 'css/category/category.css' %}">
         <link rel="stylesheet" href="{% static 'css/main.css' %}">
+        <script src="{% static 'js/countdown.js' %}"></script>
     </head>
     <body>
         <div class="container">
