--- a/funkoSite/templates/inventory/item/item_detail.html
+++ b/funkoSite/templates/inventory/item/item_detail.html
@@ -35,7 +35,31 @@
                         <button class="btn btn-primary" type="submit">Form</button>
                     </form>                    
                 {% endif %}
-            {% endif %}
+            {% endif %}            
+            <h1>Countdown Clock</h1>
+            <div id="clockdiv">
+                <div>
+                    <span class="days"></span>
+                    <div class="smalltext">Days</div>
+                </div>
+                <div>
+                    <span class="hours"></span>
+                    <div class="smalltext">Hours</div>
+                </div>
+                <div>
+                    <span class="minutes"></span>
+                    <div class="smalltext">Minutes</div>
+                </div>
+                <div>
+                    <span class="seconds"></span>
+                    <div class="smalltext">Seconds</div>
+                </div>
+            </div>
+            <script>
+                // var deadline = new Date(Date.parse(new Date()) + 15 * 24 * 60 * 60 * 1000);
+                var deadline = new Date(Date.parse("{{expiry_date.isoformat}}"));
+                initializeClock('clockdiv', deadline);
+            </script>
         </div>
     </div>
     {% if messages %}       
