--- a/funkoSite/templates/base.html
+++ b/funkoSite/templates/base.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
         <!-- Custom CSS -->
         <link rel="stylesheet" href="{% static 'css/item/item.css' %}">
+        <link rel="stylesheet" href="{% static 'css/item/countdown.css' %}">
         <link rel="stylesheet" href="{% static 'css/category/category.css' %}">
         <link rel="stylesheet" href="{% static 'css/main.css' %}">
         <script src="{% static 'js/countdown.js' %}"></script>
