--- a/funkoSite/templates/welcome_user.html
+++ b/funkoSite/templates/welcome_user.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% extends 'base.html' %}
-{% block title %}Welcome Admin!{% endblock %}
+{% block title %}Welcome!{% endblock %}
 {% block content %}
 <h1>Welcome {{user.username}}</h1>
 {% endblock %}
